--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <li> Coffee </li>
       <li> Body Building </li>
       <li> Video Games </li>
-      <li> Watching Anime </li>
+      <li> Watching Movie </li>
     </ul>
 
 <hr>
